# PROJECT-CINEMA-homework-3-

./: CMakeLists.txt  README.md
includ/: CMakeLists.txt  version.h.in
lib/: CMakeLists.txt  functions.cpp  lib.h
src/: CMakeLists.txt  main.cpp
